// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WishList .add(WishListItem) should add item 1`] = `
Array [
  Object {
    "items": Array [],
  },
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "new image",
      "name": "newName",
      "price": 23.45,
    },
  },
  Object {
    "items": Array [
      Object {
        "image": "new image",
        "name": "newName",
        "price": 23.45,
      },
    ],
  },
]
`;

exports[`WishList .add(object) should add item 1`] = `
Array [
  Object {
    "items": Array [],
  },
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "new image",
      "name": "newName",
      "price": 23.45,
    },
  },
  Object {
    "items": Array [
      Object {
        "image": "new image",
        "name": "newName",
        "price": 23.45,
      },
    ],
  },
]
`;

exports[`WishList .create() should return expected items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "image1",
      "name": "name1",
      "price": 1,
    },
    Object {
      "image": "image2",
      "name": "name2",
      "price": 2,
    },
    Object {
      "image": "image3",
      "name": "name3",
      "price": 3,
    },
  ],
}
`;

exports[`WishList .create() without input should return empty items array 1`] = `
Object {
  "items": Array [],
}
`;

exports[`WishList .items[n].remove() should remove item 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "image1",
        "name": "name1",
        "price": 1,
      },
      Object {
        "image": "image2",
        "name": "name2",
        "price": 2,
      },
      Object {
        "image": "image3",
        "name": "name3",
        "price": 3,
      },
    ],
  },
  Object {
    "op": "remove",
    "path": "/items/1",
  },
  Object {
    "items": Array [
      Object {
        "image": "image1",
        "name": "name1",
        "price": 1,
      },
      Object {
        "image": "image3",
        "name": "name3",
        "price": 3,
      },
    ],
  },
]
`;

exports[`WishList .remove() should remove item 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "image1",
        "name": "name1",
        "price": 1,
      },
      Object {
        "image": "image2",
        "name": "name2",
        "price": 2,
      },
      Object {
        "image": "image3",
        "name": "name3",
        "price": 3,
      },
    ],
  },
  Object {
    "op": "remove",
    "path": "/items/1",
  },
  Object {
    "items": Array [
      Object {
        "image": "image1",
        "name": "name1",
        "price": 1,
      },
      Object {
        "image": "image3",
        "name": "name3",
        "price": 3,
      },
    ],
  },
]
`;
